<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flapps</string>

    <string name="activity_about_title">About</string>
    
    <string name="activity_clients_title">Clients</string>
    <string name="activity_clients_subtitle">Choose a Client</string>
    <string name="activity_clientsnew_title">Client</string>
    <string name="activity_clientsnew_subtitle">Set a Client</string>
    <string name="activity_clientsnew_name_hint">Client name</string>
    <string name="activity_projects_title">Projects</string>
    <string name="activity_projects_subtitle">Choose a Project</string>
    <string name="activity_projectsnew_title">Project</string>
    <string name="activity_projectsnew_subtitle">Set a Project</string>
    <string name="activity_projectsnew_name_hint">Project name</string>
    <string name="activity_activities_title">Tasks</string>
    <string name="activity_activities_subtitle">Choose a Task</string>

    <string name="activity_activitiesnew_title">New Task</string>
    <string name="activity_activitiesnew_subtitle">Create a Task</string>
    <string name="activity_activitiesnew_name_hint">Task name</string>
    <string name="activity_activitiesnew_time_worked">Time worked</string>
    <string name="activity_activitiesnew_active">Active</string>
    <string name="activity_activitiesnew_rate">Rate ($)</string>
    <string name="activity_activitiesnew_note_hint">Note</string>
    <string name="activity_activitiesnew_off">Off</string>
    <string name="activity_activitiesnew_on">On</string>
    <string name="activity_activitynew_save_failed">Save failed!</string>
    
    <string name="activity_costs_title">Expenses</string>
    <string name="activity_costs_subtitle">Expenses list</string>
    
    <string name="activity_absencerequest_title">Time off</string>
    <string name="activity_absencerequest_subtitle">Time off requests</string>
    <string name="activity_absencenew_title">New Time off request</string>
    <string name="activity_absencenew_first_day">First Day</string>
    <string name="activity_absencenew_last_day">Last Day</string>
    <string name="activity_absencenew_full_day">full day</string>
    <string name="activity_absencenew_half_day">half day</string>
    <string name="activity_absencenew_empty_fields">Fill all fields!</string>
    <string name="activity_absencenew_save_failed">Save failed!</string>
    
    <string name="activity_costsnew_title">Expense</string>
    <string name="activity_costsnew_subtitle">Expense list</string>
    <string name="activity_costsnew_date_hint">Date</string>
    <string name="activity_costsnew_client_hint">Client</string>
    <string name="activity_costsnew_project_hint">Project</string>
    <string name="activity_costsnew_amount_hint">Amount</string>
    <string name="activity_costsnew_note_hint">Note</string>
    <string name="activity_costsnew_empty_fields">Fill all fields!</string>
    <string name="activity_costsnew_save_failed">Save failed!</string>
    
    <string name="activity_calendar_titel">Enter Date</string>
    <string name="activity_calendar_remove_titel">Confirm</string>
    <string name="activity_calendar_remove_hint">Do you really want to delete the entry?</string>

	<string name="activity_intro_btn_account">Create Account</string>
	<string name="activity_intro_btn_login">Sign In</string>
	
	<string name="activity_login_btn_account">Don\'t have an account? Create one!</string>

	<string name="activity_account_btn_cancel">Cancel</string>
	<string name="activity_account_btn_create">Create Account</string>
	<string name="activity_account_field_firstname">First Name</string>
	<string name="activity_account_field_lastname">Last Name</string>
	<string name="activity_account_field_email">Email Address</string>
	<string name="activity_account_field_company">Company Account Name</string>
	<string name="activity_account_field_phone">Phone Number</string>

	<string name="activity_about_text_version">Ver:</string>
	<string name="activity_about_btn_page">Visit Our Website</string>
	<string name="activity_about_btn_contact">Contact Support</string>
	<string name="activity_about_text_company">Flapps Inc., New York, NY</string>
	<string name="activity_about_text_address"> </string>
	<string name="activity_about_email_subject">Support / Flapps Android</string>
		
	<string name="activity_sync_title">Synchronize</string>
	<string name="activity_sync_btn_now">Synchronize now</string>
		<string name="activity_sync_text_datasync">Data synchronization</string>
	<string name="activity_sync_text_syncevery">Synchronize every</string>
	<string name="activity_sync_text_lastsync">Last synchronization</string>
	
	<string name="activity_main_title">Time Tracking</string>
	<string name="activity_main_subtitle">Track Your Time</string>
	<string name="activity_main_save_failed">Save failed!</string>
	<string name="activity_main_saved">Saved!</string>
	<string name="activity_main_enter_project">Please, enter the project!</string>
	<string name="activity_main_enter_time">Please, enter the time!</string>
	<string name="activity_main_sync_error">Synchronization failed!</string>
	<string name="activity_main_sync_success">Synchronized!</string>
				
	<string name="activity_description_title">Note</string>
	<string name="activity_description_subtitle">Write a Note</string>
			
	<string name="activity_nfcreceiver_title">NFC</string>
	<string name="activity_nfcreceiver_subtitle">NFC Receiver</string>
			
	<string name="activity_clockinout_title">Clock In/Out</string>
	<string name="activity_clockinout_subtitle">List of clock in/out</string>
			
	<string name="activity_comeinout_title">Clock In/Out</string>
	<string name="activity_comeinout_subtitle">Control of clock in/out</string>
			
			<string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_reload">Sync</string>
    <string name="action_logout">Logout</string>
    <string name="action_datatest">DataTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_date">Date</string>
    <string name="about_flapps">About Flapps!</string>
    <string name="costs_flapps">Costs Flapps!</string>
    <string name="costs_send">Send</string>
    <string name="absence_send">Send</string>
    <string name="absence_flapps">Absence Flapps!</string>
    <string name="intro_btn_next">Next</string>
    <string name="description_btn_done">Done</string>
    <string name="login_domain">Company</string>
        <string name="login_login">Login</string>
        <string name="login_pass">Password</string>
    <string-array name="fields_array">
        <item>Time Tracking</item>
        <item>Expenses</item>
        <item>Time Off</item>
        <item>Clock In/Out</item>
        <item>Clock In/Out</item>
        <item>Synchronize</item>
        <item>About</item>
        <item>Sign Out</item>
        <!--<item>DataTest</item>-->
    </string-array>

    <string-array name="activities_array">
        <item>Cannot add task to project</item>
        <item>Can add task to project</item>
        <item>Must add task to project</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="calendar_month">Absence Flapps!</string>
    <string name="calendar_month_up">&gt;&gt;</string>
    <string name="calendar_month_down"> &lt;&lt;</string>
    
    <string name="main_button_start">START</string>
    <string name="main_button_stop">STOP</string>
    <string name="main_button_save">SAVE</string>
    <string name="main_timepicker_title">Enter Time</string>
    <string name="main_description_hint">Description</string>
    <string-array name="main_fields_array">
        <item>Activity</item>
        <item>Project</item>
    </string-array>
    <string-array name="main_fields_array_description">
        <item>Note</item>
    </string-array>
    <string-array name="activities_fields_array_billable">
        <item>Billable</item>
    </string-array>

	<string name="units_minutes">minutes</string>
	<string name="units_hours">hours</string>

	<string-array name="units_days_of_week">
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WEN</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
    </string-array>
															
</resources>