<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/tutorial_background"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/login_formx"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical" >

        <com.flapps.mobile.android.flapps.utils.ActiveScrollView
            android:id="@+id/form_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dip"
                    android:adjustViewBounds="true"
                    android:padding="0dip"
                    android:src="@drawable/tutorial_top_5" />

                <EditText
                    android:id="@+id/login_domain"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dip"
                    android:background="@color/list_background_color"
                    android:hint="@string/login_domain"
                    android:inputType="textEmailAddress"
                    android:padding="8dip"
                    android:tag="top_form_element" />

                <EditText
                    android:id="@+id/login_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dip"
                    android:background="@color/list_background_color"
                    android:hint="@string/login_login"
                    android:inputType="textEmailAddress"
                    android:padding="8dip" />

                <EditText
                    android:id="@+id/login_pass"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dip"
                    android:background="@color/list_background_color"
                    android:hint="@string/login_pass"
                    android:inputType="textPassword"
                    android:padding="8dip" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/style_button_about"
                    android:onClick="login"
                    android:paddingBottom="0dip"
                    android:paddingLeft="16dip"
                    android:paddingRight="16dip"
                    android:paddingTop="0dip"
                    android:text="@string/activity_intro_btn_login" />
            </LinearLayout>
        </com.flapps.mobile.android.flapps.utils.ActiveScrollView>
    </LinearLayout>
<!-- 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dip"
        android:background="@drawable/tutorial_bottom_background_xml"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dip" >

        <Button
            android:id="@+id/intro_btn_account_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/style_button_intro_account"
            android:onClick="toAccount"
            android:paddingBottom="0dip"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:paddingTop="0dip"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:text="@string/activity_login_btn_account"
            android:textColor="@color/intro_btn"
            android:textSize="12sp" />
    </LinearLayout> -->

</LinearLayout>